-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.1
-
8157767ef (dev), bcc9af4a5 (6.5)
To reproduce the issue create a custom style according to the instructions here:
https://doc.qt.io/qt-6/technical-guide.html#adding-custom-styles
When trying to use the custom style the result in an error:
WARNING: Cannot find style "test" - fallback: "default"
- is duplicated by
-
QTBUG-111154 [REG Qt 5 → Qt 6] qtvirtualkeyboard is unable to locate any custom stylings
-
- Closed
-
| For Gerrit Dashboard: QTBUG-108536 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 461426,7 | VirtualKeyboard.Settings: ensure availability of valid engine pointer | dev | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |
| 469333,2 | VirtualKeyboard.Settings: ensure availability of valid engine pointer | 6.5 | qt/qtvirtualkeyboard | Status: MERGED | +2 | 0 |