VirtualKeyboard.Settings: ensure availability of valid engine pointer

qmlEngine/qmlContext doesn't work on a singleton while the engine is
in the process of constructing it.

Use the create factory function instead of a default ctor to ensure
that we get a valid engine pointer.

Fixes: QTBUG-108536
Fixes: QTBUG-111154
Change-Id: Ic77fa013e634b44c9d11a43ef67ea57ed85ffb5c
Reviewed-by: Jarkko Koivikko <jarkko.koivikko@code-q.fi>
(cherry picked from commit 8157767ef085d74ff8329303f3a717f3d4b01526)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>